--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,6 @@
     <head>
         <meta charset="utf-8">
         <title>BBS</title>
-        <script src="https://momentjs.com/downloads/moment.min.js"></script>
-        <script src="https://momentjs.com/downloads/moment-timezone-with-data-10-year-range.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue-moment@4.1.0/dist/vue-moment.min.js"></script>
@@ -11,20 +9,29 @@
     </head>
     <body>
         <div id="container">
-            <nav>
+            <nav id="navigator">
                 <a class="btn" href="#container">↑</a>
                 <a class="btn" href="#form">↓</a>
+                <h2>Threads</h2>
+                <ul id="threads">
+                    <li v-for="thread in threads">
+                        <a :href='"/threads/" + thread.ident'>{{ thread.name }}</a>
+                    </li>
+                </ul>
+                <input placeholder="New thread" v-model="newThreadTitle">
+                <input type="submit" id="submit-thread" v-on:click="submitThread" value="Create">
             </nav>
             <main id="app">
+                <h1>{{ threadTitle }}</h1>
                 <section v-for="message in messages">
-                    <div><a class="anchor" :id='"c-" + message[0]' :href='"/#c-" + message[0]'>#{{ message[0] }}</a>&nbsp;
-                        {{ message[1].date | moment("YYYY-MM-DD HH:mm:ss") }} - {{ message[1].name }}</div>
-                    <article>{{ message[1].content }}</article>
+                    <div><a class="anchor" :id='"c-" + message.seqNo' :href='"/#c-" + message.seqNo'>#{{ message.seqNo }}</a>&nbsp;
+                        {{ message.date | moment("YYYY-MM-DD HH:mm:ss") }} - {{ message.name }}</div>
+                    <article>{{ message.content }}</article>
                 </section>
-                <div id="form">
+                <div id="form" v-if="active">
                     <input placeholder="Anonymous" v-model="authorName"><br>
                     <textarea rows=3 cols=40 v-model="content"></textarea><br>
-                    <input type="submit" id="submit" v-on:click="submit" value="送信">
+                    <input type="submit" id="submit" v-on:click="submitComment" value="送信">
                 </div>
             </main>
         </div>
